add HTML Structure and begin CSS Style

--- a/index.html
+++ b/index.html
@@ -3,16 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 
 </head>
 <body>
 
+  <div class="container">
 
+    <div class="card">
 
+      <div class="top_blue_cover">
+
+        <img src="/images/bg-pattern-card.svg" alt="blue cover">
+
+      </div>
+
+      <div class="bottom_white_part">
+
+        <img src="/images/image-victor.jpg" alt="profile picture">
+
+        <p class="name_and_age">
+
+          <span class="name">Victor Crest</span>
+          <span class="age">26</span>
+
+        </p>
+
+        <p class="localisation">London</p>
+
+        <hr>
+
+        <p class="statistics">
+
+          <span class="number_follower">80K</span> <br>
+          <span class="follower">Followers</span> 
+          <span class="number_likes">803K</span> <br>
+          <span class="likes">Likes</span>
+          <span class="number_photos">1.4K</span> <br>
+          <span class="photos">Photos</span>
+
+        </p>
+
+      </div>
+
+    </div>
+
+  </div>
 
 </body>
 </html>
