--- a/index.html
+++ b/index.html
@@ -3,54 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Profile card component</title>
 
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Profile card component</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="container">
-
-    <div class="card">
-
-      <div class="top_blue_cover">
-
-        <img src="/images/bg-pattern-card.svg" alt="blue cover">
-
-      </div>
-
-      <div class="bottom_white_part">
-
-        <img src="/images/image-victor.jpg" alt="profile picture">
-
-        <p class="name_and_age">
-
-          <span class="name">Victor Crest</span>
-          <span class="age">26</span>
-
-        </p>
-
-        <p class="localisation">London</p>
-
-        <hr>
-
-        <p class="statistics">
-
-          <span class="number_follower">80K</span> <br>
-          <span class="follower">Followers</span> 
-          <span class="number_likes">803K</span> <br>
-          <span class="likes">Likes</span>
-          <span class="number_photos">1.4K</span> <br>
-          <span class="photos">Photos</span>
-
-        </p>
-
-      </div>
-
+  <div class="card">
+    <div class="card-header">
+      <img src="images/bg-pattern-card.svg" alt="">
     </div>
-
+    <div class="card-content">
+      <img src="images/image-victor.jpg" alt="">
+      <p>Victor Crest<span> 26</span></p>
+      <p>London</p>
+    </div>
+    <div class="card-footer">
+      <div class="footer-item">
+        <p class="status">80K</p>
+        <small class="item-name">Followers</small>
+      </div>
+      <div class="footer-item">
+        <p class="status">803K</p>
+        <small class="item-name">Likes</small>
+      </div>
+      <div class="footer-item">
+        <p class="status">1.4K</p>
+        <p class="item-name">Photos</p>
+      </div>
+    </div>
   </div>
 
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/murerkinn" target="_blank">Murat Erkin Cicek</a>.
+  </div>
 </body>
 </html>
